--- a/CPH/Views/Home/Index.cshtml
+++ b/CPH/Views/Home/Index.cshtml
@@ -2,13 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="card">
-            <p>Hello World!</p>
-        </div>
-    </div>
+<div> 
+    <H1 style="text-align:center">Welcome to CHR-Plot.</H1>
+    <br />
+    <p>To get started, please navigate to the CreateChart page by clicking the link above. 
+        Also, please visit the About page to learn about the people and contributions that made this site possible.</p>
 </div>
+
 
 @section scripts{ 
    
