--- a/CPH/Views/Home/About.cshtml
+++ b/CPH/Views/Home/About.cshtml
@@ -1,7 +1,35 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "About";
 }
+<div>
+    <div>
+        <h1 style="text-align:center">About Page</H1>
+        <br />
+        <h2>Data Source Credits</h2>
+        <p>The data for this website has been provided by the University of Wisconsin’s Public Health Institute, 
+            which makes it freely available at https://www.countyhealthrankings.org/ with the understanding that users will acknowledge its contributions.
+        </p>
 
-<h1>About</h1>
+        <h2>Development Credits</h2>
+        <p>
+            The current versions of CHR-DataGrab and CHR-Plot were designed and implemented by ETSU Department of Computing alumni Joshua Trimm and Randall Stapleton under the advisement of Computing professor Dr. Phil Pfeiffer.
+            CHR_DataMove was hacked together in a couple of hours by Phil Pfeiffer, who was happy to find some use after all of these years for his expertise in a dead language, DOSShell.
+        </p>
+
+        <h2>Client Credits</h2>
+        <p>We extend our thanks to our primary client, ETSU’s Dean of College of Public Health, Dr. Randy Wykoff, 
+           who bore with this project over the course of five years and three false starts, as well as the CPH’s system administrator, Ms. Dara Young.
+        </p>
+
+        <h2>Special Thanks</h2>
+        <p>
+            We appreciate the preliminary work that went into requirements elicitation by members of the three capstone groups that preceded Josh and Randall’s work, as well as the ongoing support of the ETSU Department of Computing, 
+            including the advisement and encouragement of Drs. Brian Bennett and Ghaith Husari, and Professor Stephen Hendrix.
+        </p>
+    </div>
+</div>
+
+@section scripts{
+
+}
 
