--- a/CPH/wwwroot/css/site.css
+++ b/CPH/wwwroot/css/site.css
@@ -41,7 +41,18 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-/*/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\CreateChart: Chart and Aggregate Section/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\*/
+/*/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\Home Page/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\*/
+#img-rounded {
+    border-radius: 25px;
+    border: 3px solid gray;
+    width: 75%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/*/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\CreateChart: Chart and Legend Section/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\*/
 .float-child-chart {
     width: 70%;
     float: left;
@@ -53,8 +64,7 @@ body {
     float: left;
     padding: 20px;
     border: inset;
-    height: 40%;
-    max-height: 258px;
+    height: 100%;
     display: block;
     overflow: hidden;
     overflow-y: scroll;
@@ -71,48 +81,6 @@ body {
     line-height: 1em;
     font-size: 14px;
     font-weight: bold;
-}
-
-.float-child-aggregate-left {
-    width: 30%;
-    float: left;
-    padding: 20px;
-    border: inset;
-    height: 30%;
-    display: inline;
-    overflow: hidden;
-}
-
-.float-child-aggregate-left > * {
-    margin-top: -20px;
-    margin-left: -15px;
-    font-size: 16px;
-}
-
-.float-child-aggregate-left > h5, .float-child-aggregate-right > h5, .float-legend-div > h5 {
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.float-child-aggregate-right {
-    width: 30%;
-    float: left;
-    padding: 20px;
-    border: inset;
-    height: 30%;
-    overflow: hidden;
-}
-
-.float-child-aggregate-right > * {
-    margin-top: -20px;
-    margin-left: -15px;
-    font-size: 16px;
-}
-
-.float-container {
-    border: 1px solid #fff;
-    padding: 20px;
 }
 
 /*/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\CreateChart: Control Section/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\*/
@@ -141,18 +109,9 @@ body {
     font-weight: bold;
 }
 
-.countryStateSwtich {
-    padding-left: 6%;
-    font-size: 18px;
-    font-weight: bold;
-}
-
 .divBtnClear {
-    display: block;
-    margin-left: 45.7%;
-    margin-bottom: -2.6%;
-    z-index: 1;
-    position: relative;
+    display: inline-block;
+    margin-left: 15.5%;
 }
 
 .btnClear {
@@ -166,7 +125,7 @@ body {
 
 .divRegionSaveLoad {
     display: inline-block;
-    padding-left: 20%;
+    padding-left: 28%;
 }
 
 .labelRegionSaveLoad, regionSaveLoad {
