counties resetting and zero value switch
Fixed the counties resetting on health attributes change, and implemented the zero value switch.

--- a/CPH/Views/Shared/_Layout.cshtml
+++ b/CPH/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - CPH
+            &copy; 2024 - East Tennessee State University
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
