--- a/CPH/Views/Home/Index.cshtml
+++ b/CPH/Views/Home/Index.cshtml
@@ -5,16 +5,15 @@
 <div> 
     <H1 style="text-align:center">Welcome to CHR-Plot</H1>
     <br />
-    <p>This website generates annotated percentile charts of health indicators for the United States and its territories.  Data for these charts has been compiled by the County Health Rankings (CHR) project <a href="https://uwphi.pophealth.wisc.edu">County Health Rankings (CHR) project</a>, a service of the University of Wisconsin's Public Health Institute.  The CHR project maintains data on its website on various health indicators for each of the U.S.'s 3000+ counties and independent cities, dating to 2010.</p>
+    <p>This website generates annotated percentile charts of health indicators for the United States and its territories. Data for these charts has been compiled by the <a href="https://uwphi.pophealth.wisc.edu">County Health Rankings (CHR) project</a>, a service of the University of Wisconsin's Public Health Institute.  The CHR project maintains data on its website on various health indicators for each of the U.S.'s 3000+ counties and independent cities, dating to 2010.</p>
     <p>This site's charts depict CHR indicators for user-selected counties and states on curves generated from CHR data for a user-specified indicatorand year.  Charts show counties and states as colorized dots, while listing percentiles in a sidebar. Users can save groups of counties and states to their PC's download folders, to be used in other plots..</p>
     <hr />
     <img src="~/Content/Images/chart_example.jpg" alt="Example chart image" id="img-rounded" />
     <hr />
-    <p>To use the site, select a year from the dropdown on this page. Doing so causes the site to show three additional dropdowns:</p>
+    <p>To use the site, select a year from the dropdown on the Create Chart page. Doing so causes the site to show two additional controls:</p>
     <ul>
-        <li>One that lists counties and states from which to choose.</li>
-        <li>A second that shows an alphabetically sorted list of CHR health indicators for the selected year.</li>
-        <li>A supporting dropdown for the second that controls whether this list of health indicators shows
+        <li>The first is an alphabetically sorted list of CHR health indicators for the selected year.</li>
+        <li>The second is a supporting dropdown that filters what the list of health indicators shows.
             <ul>
                 <li>all indicators, or</li>
                 <li>selected indicators, filtered by whether they represent raw values (default), ratios, numerators, or denominators</li>
@@ -25,7 +24,7 @@
     <ul>
         <li>the year control</li>
         <li>the health indicator dropdown for the given year, with its associated health indicators filter</li>
-        <li>the state/county dropdown for the given year</li>
+        <li>the state/county list for the given year</li>
         <li>additional control that allows for
             <ul>
                 <li>saving the currently selected group of counties and states under a name of your choice, or</li>
