--- a/CPH/Views/Home/About.cshtml
+++ b/CPH/Views/Home/About.cshtml
@@ -9,11 +9,15 @@
         <p>The data for this website has been provided by the University of Wisconsin’s Public Health Institute, 
             which makes it freely available at https://www.countyhealthrankings.org/ with the understanding that users will acknowledge its contributions.
         </p>
-
+        <p>Characterizations of the site's data can be obtained from the <a href="https://www.countyhealthrankings.org/health-data/methodology-and-sources/rankings-data-documentation"> CHR's download and documentation pages</a>.
+           The site associates each year's population data with a PDF- and an XLSX-format data dictionary that describe the semantics of the CHR indicators.
+        </p>
         <h2>Development Credits</h2>
         <p>
             The current versions of CHR-DataGrab and CHR-Plot were designed and implemented by ETSU Department of Computing alumni Joshua Trimm and Randall Stapleton under the advisement of Computing professor Dr. Phil Pfeiffer.
-            CHR_DataMove was hacked together in a couple of hours by Phil Pfeiffer, who was happy to find some use after all of these years for his expertise in a dead language, DOSShell.
+        </p>   
+        <p> CHR_DataMove, which was contributed by Dr. Pfeiffer, is a supporting script that populates the website's data store with content from the Population Health Institute.
+            CHR_DataMove should be installed as a privileged program and run by a trusted admin, in order to assure the integrity of the site's content.
         </p>
 
         <h2>Client Credits</h2>
