--- a/CPH/Views/Home/Index.cshtml
+++ b/CPH/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div> 
     <H1 style="text-align:center">Welcome to CHR-Plot</H1>
     <br />
-    <p>This website generates annotated percentile charts of health indicators for the United States and its territories. Data for these charts has been compiled by the <a href="https://uwphi.pophealth.wisc.edu">County Health Rankings (CHR) project</a>, a service of the University of Wisconsin's Public Health Institute.  The CHR project maintains data on its website on various health indicators for each of the U.S.'s 3000+ counties and independent cities, dating to 2010.</p>
+    <p>This website generates annotated percentile charts of health indicators for the United States and its territories. Data for these charts has been compiled by the <a href="https://www.countyhealthrankings.org/">County Health Rankings (CHR) project</a>, a service of the <a href="https://uwphi.pophealth.wisc.edu">University of Wisconsin's Population Health Institute</a>.  The CHR project maintains data on its website on various health indicators for each of the U.S.'s 3000+ counties and independent cities, dating to 2010.</p>
     <p>This site's charts depict CHR indicators for user-selected counties and states on curves generated from CHR data for a user-specified indicatorand year.  Charts show counties and states as colorized dots, while listing percentiles in a sidebar. Users can save groups of counties and states to their PC's download folders, to be used in other plots..</p>
     <hr />
     <img src="~/Content/Images/chart_example.jpg" alt="Example chart image" id="img-rounded" />
